keep-backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: keepbackend.ravigooglekeep.ga
    http:
      paths:
      - backend:
          serviceName: keep-backend-service
          servicePort: 4000
